--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Music Bot",
     "description": "Telegram Group Calls streaming bot with some useful features, written in Python with Pyrogram and Py-Tgcalls. .",
-    "logo": "https://telegra.ph/file/c0e014ff34f34d1056627.png",
+    "logo": "https://telegra.ph/file/fb6b0e9d56fad7cb8c2ea.jpg",
     "keywords": [
     "python3",
     "telegram",
